--- a/default.css
+++ b/default.css
@@ -214,6 +214,13 @@
 	.material-icons.md-24 { font-size: 24px; } /* Default */
 	.material-icons.md-36 { font-size: 36px; }
 	.material-icons.md-48 { font-size: 60px; }
+	
+	.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
+	.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
+
+	.material-icons.md-light { color: rgba(255, 255, 255, 1); }
+	.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
+	
 	ul.contact
 	{
 		margin: 0;
