--- a/default.css
+++ b/default.css
@@ -210,9 +210,11 @@
 /* Social Icon Styles                                                            */
 /*********************************************************************************/
 	/* Rules for icon sizes: */
+	.material-icons {float:center};
 	.material-icons.md-18 { font-size: 18px; }
 	.material-icons.md-24 { font-size: 24px; } /* Default */
-	.material-icons.md-36 { font-size: 36px; }
+	.material-icons.md-36 { font-size: 36px;
+				padding: 0 0 0 45%;}
 	.material-icons.md-48 { font-size: 60px; }
 	
 	.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
