--- a/default.css
+++ b/default.css
@@ -196,6 +196,11 @@
 		margin: 0 auto;
 		width: auto;
 	}
+	.column-image
+	{
+		width:200px;
+		height:250px;
+	}
 
 /*********************************************************************************/
 /* List Styles                                                                   */
