--- a/default.css
+++ b/default.css
@@ -516,6 +516,28 @@
 		padding-right: 100px;
 		border-right: 1px solid rgba(0,0,0,.1);
 	}
+	.two_column_container1
+	{
+		color: #85BDDE;
+	}
+	.two_column_container2
+	{
+		color: #DAE0E6;
+	}
+	.container_left
+	{
+		width:40%;
+		height:300px;
+		padding: 5%;
+		float:left;
+	}
+	.container_right
+	{
+		width:40%;
+		height:300px;
+		padding: 5%;
+		float:right;
+	}
 
 /*********************************************************************************/
 /* Sidebar                                                                       */
