--- a/default.css
+++ b/default.css
@@ -519,23 +519,27 @@
 	.two_column_container1
 	{
 		color: #85BDDE;
+		height: 600px;
+		width:100%;
 	}
 	.two_column_container2
 	{
 		color: #DAE0E6;
+		height: 600px;
+		width: 100%;
 	}
 	.container_left
 	{
 		width:40%;
-		height:300px;
-		padding: 5%;
+		height:100%px;
+		padding: 2%;
 		float:left;
 	}
 	.container_right
 	{
 		width:40%;
-		height:300px;
-		padding: 5%;
+		height:100%;
+		padding: 2%;
 		float:right;
 	}
 
