--- a/default.css
+++ b/default.css
@@ -508,7 +508,16 @@
 /*********************************************************************************/
 /* Content                                                                       */
 /*********************************************************************************/
-
+	.embedded{
+		width:100%;
+		height: 300px;
+		overflow: scroll;
+	}
+	.gist{
+		overflow: scroll;
+		height: 250px;
+		width:100%;
+	}
 	#content
 	{
 		float: left;
