--- a/default.css
+++ b/default.css
@@ -444,14 +444,14 @@
 
 	#wrapper1
 	{
-		background: #0062F1;
+		background: #FFFFFF;
 		padding: 2%;
 		
 	}
 
 	#wrapper2
 	{
-		background: #3E8DFF;
+		background: #DAE0E6;
 		padding: 2%;
 	}
 
