--- a/default.css
+++ b/default.css
@@ -236,7 +236,7 @@
       width: 13px;
       height: 0;
       padding-top: 13px;
-      background-image: url(img/pagination.png);
+      background-image: url(https://cloud.githubusercontent.com/assets/16012579/11765113/d12cf9ca-a10f-11e5-8b0a-8b3bcb9d185e.png);
       background-position: 0 0;
       float: left;
       overflow: hidden;
