--- a/default.css
+++ b/default.css
@@ -696,8 +696,8 @@
 	#footer .fbox3
 	{
 		float: left;
-		width: 320px;
-		padding: 0px 40px 0px 40px;
+		width: 25%;
+		padding: 0% 4%;
 	}
 	
 	#footer .icon
@@ -859,8 +859,8 @@
 	#three-column #tbox3
 	{
 		float: left;
-		width: 320px;
-		padding: 40px;
+		width: 25%;
+		padding: 4%;
 	}
 	
 	#three-column .title
