--- a/default.css
+++ b/default.css
@@ -182,7 +182,13 @@
 	.image-left
 	{
 		float: left;
-		margin: 0 2em 2em 0;
+		margin: 0 2em 2em 2em;
+	}
+	
+	.image-right
+	{
+		float: right;
+		margin: 0 2em 2em 2em;
 	}
 	
 	.image-centered
