--- a/default.css
+++ b/default.css
@@ -159,7 +159,10 @@
 /*********************************************************************************/
 /* Image Style                                                                   */
 /*********************************************************************************/
-
+	.video{
+		margin:auto;
+		padding: 10px 0;
+	}
 	.image
 	{
 		display: inline-block;
