--- a/default.css
+++ b/default.css
@@ -159,9 +159,9 @@
 /*********************************************************************************/
 /* Image Style                                                                   */
 /*********************************************************************************/
-	.video{
+	.video-center{
 		margin: 0 auto;
-		padding: 10px 0;
+		width:100%;
 	}
 	.image
 	{
