--- a/default.css
+++ b/default.css
@@ -836,7 +836,25 @@
 	{
 		float: right;
 	}
+/*********************************************************************************/
+/* Two Columns                                                                 */
+/*********************************************************************************/
 
+	#left
+	{
+		float: left;
+		margin: 0 0 0 10%;
+	}
+
+	#right
+	{
+		float:right;
+		margin:0 10% 0 0;
+	}
+	.clear
+	{
+		clear: both;
+	}
 /*********************************************************************************/
 /* Three Columns                                                                 */
 /*********************************************************************************/
