--- a/default.css
+++ b/default.css
@@ -843,13 +843,15 @@
 	#left
 	{
 		float: left;
-		margin: 0 0 0 10%;
+		margin: 0 0 0 7%;
+		width:40%;
 	}
 
 	#right
 	{
 		float:right;
-		margin:0 10% 0 0;
+		margin:0 7% 0 0;
+		width: 40%;
 	}
 	.clear
 	{
