--- a/default.css
+++ b/default.css
@@ -625,6 +625,11 @@
 		height:100px;
 		color: #FFFFFF;
 	}
+	.buffer-small{
+		
+		height:50px;
+		color: #FFFFFF;
+	}
 
 /*********************************************************************************/
 /* Content                                                                       */
